--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,34 @@
 
 <body>
 
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="header__logo">
+                    <a href="#"><img src="images/JETRO.png" alt=""></a>
+                </div>
+                <nav class="header__menu">
+                    <ul>
+                        <li><a href="#">
+                            Home
+                        </a></li>
+                        <li><a href="#">
+                            About Us
+                        </a></li>
+                        <li><a href="#">
+                            Blog
+                        </a></li>
+                        <li><a href="#">
+                            Portfolio
+                        </a></li>
+                        <li><a href="#">
+                            Contact Us 
+                        </a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
 </body>
 
