--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,87 @@
         </div>
     </header>
 
+    <section class="sliders">
+        <div class="container">
+            <div class="slider">
+                <div class="slider__item" style="background-image: url(images/slider/item1.jpg);">
+                    <div class="slider__text">
+                        <div class="slider__title">
+                            Slide One
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea. </p>
+                    </div>
+                </div>
+                <div class="slider__item" style="background-image: url(images/slider/item2.jpg);">
+                    <div class="slider__text">
+                        <div class="slider__title">
+                            Slide Two
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea. </p>
+                    </div>
+                </div>
+                <div class="slider__item" style="background-image: url(images/slider/item3.jpg);">
+                    <div class="slider__text">
+                        <div class="slider__title">
+                            Slide Three
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea. </p>
+                    </div>
+                </div>
+                <div class="slider__item" style="background-image: url(images/slider/item4.jpg);">
+                    <div class="slider__text">
+                        <div class="slider__title">
+                            Slide Four
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea. </p>
+                    </div>
+                </div>
+                <div class="slider__item" style="background-image: url(images/slider/item5.jpg);">
+                    <div class="slider__text">
+                        <div class="slider__title">
+                            Slide Five
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea. </p>
+                    </div>
+                </div>
+                <div class="slider__item" style="background-image: url(images/slider/item6.jpg);">
+                    <div class="slider__text">
+                        <div class="slider__title">
+                            Slide Six
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="thumbs">
+                <div>
+                    <div class="thumbs__item" style="background-image: url(images/slider/item1.jpg);"></div>
+                </div>
+                <div>
+                    <div class="thumbs__item" style="background-image: url(images/slider/item2.jpg);"></div>
+                </div>
+                <div>
+                    <div class="thumbs__item" style="background-image: url(images/slider/item3.jpg);"></div>
+                </div>
+                <div>
+                    <div class="thumbs__item" style="background-image: url(images/slider/item4.jpg);"></div>
+                </div>
+                <div>
+                    <div class="thumbs__item" style="background-image: url(images/slider/item5.jpg);"></div>
+                </div>
+                <div>
+                    <div class="thumbs__item" style="background-image: url(images/slider/item6.jpg);"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/libs.min.js"></script>
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
