added section features

--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,49 @@
         </div>
     </section>
 
+    <section class="features">
+        <div class="container">
+            <div class="features__inner">
+                <div class="features__item">
+                    <div class="features__title portfolio">
+                        Check out my latest portfolio items
+                    </div>
+                    <div class="features__text">
+                        Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posue re ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis. Aenean sodales
+                        nibh non lectus tempor a interdum justo ultricies.
+                    </div>
+                    <div class="features__link">
+                        More
+                    </div>
+                </div>
+                <div class="features__item">
+                    <div class="features__title work">
+                        Offer Top Notch Quality Work & Services
+                    </div>
+                    <div class="features__text">
+                        Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posue re ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis. Aenean sodales
+                        nibh non lectus tempor a interdum justo ultricies.
+                    </div>
+                    <div class="features__link">
+                        More
+                    </div>
+                </div>
+                <div class="features__item">
+                    <div class="features__title connected">
+                        Follow Me on Twitter, Facebook & Pinterest
+                    </div>
+                    <div class="features__text">
+                        Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posue re ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis. Aenean sodales
+                        nibh non lectus tempor a interdum justo ultricies.
+                    </div>
+                    <div class="features__link">
+                        More
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
