added section works

--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,61 @@
         </div>
     </section>
 
+    <section class="works">
+        <div class="container">
+            <div class="works__title">
+                Recent Works
+            </div>
+            <div class="works__inner">
+                <a href="#" class="works__item">
+                    <img src="images/recent_work/item-1.jpg" alt="">
+                    <div class="item__inner">
+                        <div class="item__title">
+                            Character Design
+                        </div>
+                        <div class="item__date">
+                            June 15, 2012
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="works__item">
+                    <img src="images/recent_work/item-2.jpg" alt="">
+                    <div class="item__inner">
+                        <div class="item__title">
+                            Brochure Design
+                        </div>
+                        <div class="item__date">
+                            June 15, 2012
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="works__item">
+                    <img src="images/recent_work/item-3.jpg" alt="">
+                    <div class="item__inner">
+                        <div class="item__title">
+                            Social Media Buttons
+                        </div>
+                        <div class="item__date">
+                            June 15, 2012
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="works__item">
+                    <img src="images/recent_work/item-4.jpg" alt="">
+                    <div class="item__inner">
+                        <div class="item__title">
+                            10 Amazing Websites
+                        </div>
+                        <div class="item__date">
+                            June 15, 2012
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
