--- a/app/index.html
+++ b/app/index.html
@@ -213,7 +213,68 @@
         </div>
     </section>
 
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__item about">
+                    <div class="footer__title">
+                        About Jetro
+                    </div>
+                    <div class="footer__text">
+                        <p>
+                            Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea. Id mei vitae denique, in eam commodo veritus disputando.
+                        </p>
+                        <p>
+                            Pro et erant delicata, eu vim essent imperdiet accommodare, dictas deseruisse ius an. Solet everti definitionem id ius, sonet oporteat cu vim.
+                        </p>
+                    </div>
+                </div>
+                <div class="footer__item twitter">
+                    <div class="footer__title">
+                        Twitter Widget
+                    </div>
+                    <div class="footer__text">
+                        <p>
+                            <a href="#">@pixelmater</a> What an awesome design with great functionality :)
+                        </p>
+                        <span>
+                            about 1 hour ago
+                        </span>
+                        <p>
+                            <a href="#">@designdude</a> What an awesome design with great functionality :)
+                        </p>
+                        <span>
+                            about 2 hour ago
+                        </span>
+                        <p>
+                            Follow <a href="#">@bestpsdfreebies</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="footer__item contact">
+                    <div class="footer__title">
+                        Contact Us
+                    </div>
+                    <div class="footer__text">
+                        <p>
+                            Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri.
+                        </p>
+                        <p class="info">
+                            information@jetro.com
+                        </p>
+                        <a href="tel: 12223334444">1.222.333.4444</a>
+                        <div class="footer__icons">
+                            <img src="images/contact_icon/facebook.jpg" alt="">
+                            <img src="images/contact_icon/twitter.jpg" alt="">
+                            <img src="images/contact_icon/email.jpg" alt="">
+                            <img src="images/contact_icon/rss.jpg" alt="">
+                            <img src="images/contact_icon/vimeo.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
