--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,11 @@
                     <a href="#"><img src="images/JETRO.png" alt=""></a>
                 </div>
                 <nav class="header__menu">
+                    <div class="header__menu-btn">
+                        <div class="header__menu-btn--line"></div>
+                        <div class="header__menu-btn--line"></div>
+                        <div class="header__menu-btn--line"></div>
+                    </div>
                     <ul>
                         <li><a href="#">
                             Home
@@ -161,8 +166,10 @@
 
     <section class="works">
         <div class="container">
-            <div class="works__title">
-                Recent Works
+            <div class="works__line">
+                <div class="works__title">
+                    Recent Works
+                </div>
             </div>
             <div class="works__inner">
                 <a href="#" class="works__item">
